welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:7: error: '=' expected but '}' found.
    }
    ^